--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,93 @@
 plugins {
-    id 'java'
+    id 'java-library'
+    id 'maven-publish'
+    id 'signing'
 }
 
-group 'o.horbenko'
-version '1.0-SNAPSHOT'
+group 'io.github.oleksiihorbenko'
+def artifactId = 'fsm'
+version '1.0'
 
 repositories {
     mavenCentral()
 }
 
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
+
 dependencies {
 
-    // JUnit
+    // JUnit + Mockito
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.3.3'
+
 
     // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     testCompileOnly 'org.projectlombok:lombok:1.18.12'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+//            artifactId = this.artifactId
+            from components.java
+            versionMapping {
+                usage('java-api') {
+                    fromResolutionOf('runtimeClasspath')
+                }
+                usage('java-runtime') {
+                    fromResolutionResult()
+                }
+            }
+            pom {
+                name = 'Finite State Machine library'
+                description = 'Simple implementation of flat Finite State Machine'
+                url = 'https://github.com/OleksiiHorbenko/fsm'
+                licenses {
+                    license {
+                        name = 'The Apache License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'ohorbenko'
+                        name = 'Oleksii Horbenko'
+                        email = 'gorbenko.oleksii@gmail.com'
+                    }
+                }
+                scm {
+                    connection = 'https://github.com/OleksiiHorbenko/fsm.git'
+                    developerConnection = 'https://github.com/OleksiiHorbenko/fsm.git'
+                    url = 'https://github.com/OleksiiHorbenko/fsm'
+                }
+            }
+        }
+    }
+    repositories {
+        maven {
+            // change URLs to point to your repos, e.g. http://my.org/repo
+            def releasesRepoUrl = "$buildDir/repos/releases"
+            def snapshotsRepoUrl = "$buildDir/repos/snapshots"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+        }
+    }
+}
+
+
+signing {
+    sign publishing.publications.mavenJava
+}
+
+
+javadoc {
+    if(JavaVersion.current().isJava9Compatible()) {
+        options.addBooleanOption('html5', true)
+    }
 }
