--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
-#Sun Apr 19 19:33:01 EEST 2020
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.1-all.zip
+#Sat May 02 01:49:39 EEST 2020
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.1-milestone-2-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
